#70 fix: UnsupportedOperationException 수정